WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305259
[GStreamer][WebRTC][Rice] Asserts when adding a TURN server
https://bugs.webkit.org/show_bug.cgi?id=305259
Summary
[GStreamer][WebRTC][Rice] Asserts when adding a TURN server
Philippe Normand
Reported
2026-01-10 04:07:25 PST
(gdb) bt #0 0x00007fe06d3c5bd9 in WTFCrash () at /var/home/phil/WebKit/Source/WTF/wtf/Assertions.cpp:380 #1 0x00007fe0788a420b in WTFCrashWithInfo () at WTF/Headers/wtf/Assertions.h:985 #2 0x00007fe079220e23 in WTF::StringView::StringView (this=0x7ffd6a0f6e50, other=...) at WTF/Headers/wtf/text/StringView.h:353 #3 0x00007fe07e13697f in addTurnServer (agent=0x1d16a70 [WebKitGstIceAgent], url=...) at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceAgent.cpp:283 #4 0x00007fe07e133205 in webkitGstWebRTCIceAgentAddTurnServer (ice=0x1d16a70 [WebKitGstIceAgent], uri=0x2202600 "turns://1768133073:UtCOSw3wQjxrSi63H5TDvQVRvhw%
3D@turn-jitsi.igalia.com
:443/?transport=tcp") at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceAgent.cpp:330 #5 0x00007fcf9c02c2bd in gst_webrtc_bin_add_turn_server (webrtc=0x20152c0 [GstWebRTCBin], uri=0x2202600 "turns://1768133073:UtCOSw3wQjxrSi63H5TDvQVRvhw%
3D@turn-jitsi.igalia.com
:443/?transport=tcp") at ../../local-projects/subprojects/gstreamer-full/subprojects/gst-plugins-bad/ext/webrtc/gstwebrtcbin.c:7459 #6 0x00007fe063a7a056 in ffi_call_unix64 () at ../src/x86/unix64.S:104 #7 0x00007fe063a75d16 in ffi_call_int (cif=cif@entry=0x7ffd6a0f7300, fn=fn@entry=0x7fcf9c02c250 <gst_webrtc_bin_add_turn_server>, rvalue=<optimized out>, rvalue@entry=0x7ffd6a0f7260, avalue=avalue@entry=0x7ffd6a0f7220, closure=closure@entry=0x0) at ../src/x86/ffi64.c:676 #8 0x00007fe063a787ae in ffi_call (cif=cif@entry=0x7ffd6a0f7300, fn=fn@entry=0x7fcf9c02c250 <gst_webrtc_bin_add_turn_server>, rvalue=rvalue@entry=0x7ffd6a0f7260, avalue=avalue@entry=0x7ffd6a0f7220) at ../src/x86/ffi64.c:713 #12 0x00007fe06e22b7f5 in <emit signal '0x7fe077257940 <.L.str.78> "add-turn-server"' on instance 0x20152c0 [GstWebRTCBin]> (instance=0x20152c0, detailed_signal=0x7fe077257940 <.L.str.78> "add-turn-server") at ../gobject/gsignal.c:3639 #9 0x00007fe06e211966 in g_cclosure_marshal_generic_va (closure=<optimized out>, return_value=<optimized out>, instance=<optimized out>, args_list=<optimized out>, marshal_data=<optimized out>, n_params=<optimized out>, param_types=<optimized out>) at ../gobject/gclosure.c:1743 #10 0x00007fe06e22b412 in _g_closure_invoke_va (closure=0x1fca510, return_value=0x7ffd6a0f74e0, instance=0x20152c0, args=0x7ffd6a0f75d0, n_params=1, param_types=0x1fca540) at ../gobject/gclosure.c:980 #11 signal_emit_valist_unlocked (instance=instance@entry=0x20152c0, signal_id=<optimized out>, detail=0, var_args=var_args@entry=0x7ffd6a0f75d0) at ../gobject/gsignal.c:3439 #13 0x00007fe07e16563a in WebCore::GStreamerMediaEndpoint::setConfiguration (this=0x7fcb493b5ba0, configuration=...) at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:436 #14 0x00007fe07e178519 in WebCore::GStreamerPeerConnectionBackend::setConfiguration (this=0x7fcf9fcdd620, configuration=...) at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:138 #15 0x00007fe07e178012 in WebCore::createGStreamerPeerConnectionBackend (peerConnection=..., configuration=...) at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:89 #16 0x00007fe07e0a9b6c in WebCore::RTCPeerConnection::initializeWithConfiguration (this=0x7fcf9f9411e0, configuration=...) at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:602 #17 0x00007fe07e0a95c0 in WebCore::RTCPeerConnection::create (document=..., configuration=...) at /var/home/phil/WebKit/Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:96 #18 0x00007fe07cc50c93 in WebCore::JSDOMConstructor<WebCore::JSRTCPeerConnection>::construct (lexicalGlobalObject=0x7fe05603e088, callFrame=0x7ffd6a0f7f90) at WebCore/DerivedSources/JSRTCPeerConnection.cpp:445 #19 0x00007fe015c0c3e7 in ??? () #20 0x00007ffd6a0f8010 in ??? () #21 0x00007fe06aacadb4 in llint_op_construct () at /var/home/phil/WebKit/local-build-gtk/WebKitBuild/GTK/Debug/lib/libjavascriptcoregtk-6.0.so.1 #22 0x0000000000000000 in ??? ()
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2026-01-10 04:54:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56391
EWS
Comment 2
2026-01-12 03:59:05 PST
Committed
305456@main
(ed0b61add477): <
https://commits.webkit.org/305456@main
> Reviewed commits have been landed. Closing PR #56391 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-12 04:00:15 PST
<
rdar://problem/167978111
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug