[GStreamer][WebRTC][Rice] Asserts when adding a TURN server https://bugs.webkit.org/show_bug.cgi?id=305259

Reviewed by Xabier Rodriguez-Calvar.

Copy the transport URL query parameter. Using a StringView was incorrect, leading to an ASSERT when
the `value` went out of scope.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceAgent.cpp:
(addTurnServer):

Canonical link: https://commits.webkit.org/305456@main